GL/src/test/deca/context/valid/deca_sans_objet/convfloat.deca
// Description:
//    test de convfloat
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

{
  float f;
  f = 1 + 2.5;
}