GL/src/test/deca/context/invalid/deca_sans_objet/decalaration.deca
// Description :
// test de déclaration des variables
//
// Resultats :
// Ligne 12: redeclaration de variable
//
// Historique:
//    cree le 01/01/2026

{
        int x ;
        boolean x ;
}